# flacarray

./: .gitignore  404.html  AUTHORS  CMakeLists.txt  MANIFEST.in  README.md  index.html  meson.build  objects.inv  pyproject.toml
.github/workflows/: deploy.yml  docs.yml  test.yml  wheels.yml
cmake/: Findflacarray.cmake
cookbook/: index.html
dev/: index.html
docs/: mkdocs.yml
docs/docs/: cookbook.ipynb  dev.md  index.md  install.md  reference.md  tutorial.ipynb
flacarray/: __init__.py  compress.py  hdf5.py  hdf5_load_v0.py  hdf5_utils.py  io_common.py  meson.build  mpi.py  zarr.py  zarr_load_v0.py
flacarray/libflacarray/: README.md  compress.c  decompress.c  flacarray.h  low_level.mk  meson.build  test_low_level.c  utils.c
flacarray/scripts/: benchmark.py  meson.build
flacarray/tests/: hdf5.py  meson.build  runner.py  zarr.py
install/: index.html
packaging/: conda_build_requirements.txt  pip_build_requirements.txt
packaging/test_c_link/: CMakeLists.txt  Findflacarray.cmake  test.c
packaging/wheels/: install_deps_linux.sh  install_deps_osx.sh  test_local_cibuildwheel.sh
print_page/: index.html
reference/: index.html
search/: search_index.json
src/: CMakeLists.txt  meson.build
src/flacarray/: CMakeLists.txt  __init__.py  array.py  compress.py  decompress.py  demo.py  generate_version.sh  hdf5.py  hdf5_load_v0.py  hdf5_load_v1.py  hdf5_utils.py  io_common.py  meson.build  mpi.py  utils.py  zarr.py  zarr_load_v0.py  zarr_load_v1.py
src/flacarray/libflacarray/: README.md  compress.c  decompress.c  flacarray.h  libflacarray.pyx  low_level.mk  test.c  test_low_level.c  utils.c  verify.c
src/flacarray/scripts/: CMakeLists.txt  __init__.py  benchmark.py  config.py  config.py.in
src/flacarray/tests/: CMakeLists.txt  array.py  bindings.py  hdf5.py  utils.py  zarr.py
tutorial/: index.html
