
[build-system]
requires = [
    "scikit-build-core",
    "cython",
    "cython-cmake",
    "numpy",
    "setuptools>=80",
    "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "flacarray"
dynamic = ["version"]
description = "FLAC Compression of Arrays"
readme = "README.md"
maintainers = [
    { name = "Theodore Kisner", email = "tskisner.public@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
flacarray_benchmark = "flacarray.scripts:bench_cli"
flacarray_config = "flacarray.scripts:config_cli"

[project.urls]
"Documentation" = "https://hpc4cmb.github.io/flacarray/"
"Source" = "https://github.com/hpc4cmb/flacarray/"
"Issue Tracker" = "https://github.com/hpc4cmb/flacarray/issues"

# # We use setuptools_scm as the "source of truth" for the version.
# # This value is then available from cmake, and will be propagated
# # to both the python and C code.
# [tool.setuptools_scm]
# version_file = "pkg/_version.py"

[tool.setuptools_scm]

[tool.scikit-build]
# A list of args to pass to CMake when configuring the project.
cmake.args = []
# A table of defines to pass to CMake when configuring the project. Additive.
cmake.define = {}
# The build type to use when building the project.
cmake.build-type = "Release"
# The source directory to use when building the project.
cmake.source-dir = "."
# Use Make as a fallback if a suitable Ninja executable is not found.
ninja.make-fallback = true
# The logging level to display.
logging.level = "WARNING"
# Files to include in the SDist even if they are skipped by default.
sdist.include = []
# Files to exclude from the SDist even if they are included by default.
sdist.exclude = ["build", "wheelhouse", "docs/site"]
# Try to build a reproducible distribution.
sdist.reproducible = true
# If set to True, CMake will be run before building the SDist.
sdist.cmake = false
# A list of packages to auto-copy into the wheel.
wheel.packages = []
# Fill out extra tags that are not required.
wheel.expand-macos-universal-tags = false
# The CMake install prefix relative to the platlib wheel path.
wheel.install-dir = ""
# A list of license files to include in the wheel. Supports glob patterns.
wheel.license-files = ["LICENSE"]
# Run CMake as part of building the wheel.
wheel.cmake = true
# Target the platlib or the purelib.
wheel.platlib = true
# A set of patterns to exclude from the wheel.
wheel.exclude = []
# The build tag to use for the wheel. If empty, no build tag is used.
wheel.build-tag = ""
# If CMake is less than this value, backport a copy of FindPython.
backport.find-python = "3.26.1"
# Select the editable mode to use. Can be "redirect" (default) or "inplace".
editable.mode = "redirect"
# Turn on verbose output for the editable mode rebuilds.
editable.verbose = true
# Rebuild the project when the package is imported.
editable.rebuild = false
# Extra args to pass directly to the builder in the build step.
build.tool-args = []
# The build targets to use when building the project.
build.targets = []
# Verbose printout when building.
build.verbose = true
# Additional ``build-system.requires``.
build.requires = []
# The components to install.
install.components = []
# Whether to strip the binaries.
install.strip = true
# Add the python build environment site_packages folder to the CMake prefix paths.
search.site-packages = true
# Strictly check all config options.
strict-config = true
# Enable early previews of features not finalized yet.
experimental = true
# If set, this will provide a method for backward compatibility.
minimum-version = "0.11" # current version
# The CMake build directory. Defaults to a unique temporary directory.
build-dir = "build"
# Get version from setuptools_scm
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
